tests/baselines/reference/FunctionDeclaration5_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration5_es6.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration5_es6.ts(1,14): error TS1138: Parameter declaration expected.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration5_es6.ts(1,14): error TS2304: Cannot find name 'yield'.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration5_es6.ts(1,19): error TS1005: ';' expected.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration5_es6.ts (4 errors) ====
    function*foo(yield) {
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
                 ~~~~~
!!! error TS1138: Parameter declaration expected.
                 ~~~~~
!!! error TS2304: Cannot find name 'yield'.
                      ~
!!! error TS1005: ';' expected.
    }